--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.5.0",
+    "ant-design-vue": "^3.2.15",
     "core-js": "^3.8.3",
-    "element3": "^0.0.40",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
